--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-h1 {
-    color: red;
+* {
+    border: 1px solid red;
+}
+
+.main-container {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 200px 1fr;
+}
+
+.sidebar {
+    grid-column: 1 / 2;
+    grid-row: 1 /3;
+    background-color: #1A92D4;
+    color: #FFFFFF;
+}
+
+.sidebar ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.sidebar-title {
+    display: grid;
+    align-items: center;
+    grid-auto-flow: column;
+    justify-content: start;
+    gap: 20px;
+}
+
+.sidebar li {
+    display: grid;
+    align-items: center;
+    grid-auto-flow: column;
+    justify-content: start;
+    gap: 20px;
 }
