--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 
-.main-container {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body {
+    font-family: "Roboto", sans-serif;
     display: grid;
     grid-template-columns: min-content 1fr;
+    margin: 0;
 }
 
 .sidebar {
@@ -35,6 +39,17 @@
     gap: 20px;
 }
 
+/* .sidebar img {
+    height: 100%;
+    width: auto;
+} */
+
+.header {
+    padding: 20px;
+    font-weight: 700;
+    box-shadow: 0px -4px 14px 4px #D1D3D3;
+}
+
 .header-top {
     display: grid;
     grid-template-columns: 1fr max-content;
@@ -43,11 +58,30 @@
 .acct-info {
     display: flex;
     align-items: center;
+    gap: 1.8rem;
+    font-size: 1.2rem;
+    margin-left: 1.8rem;
 }
 
 .search-bar {
     display: flex;
     align-items: center;
+    gap: 1rem;
+}
+
+.search-bar input {
+    background-color: #E2E8EF;
+    width: 100%;
+    height: 1.5rem;
+    max-width: 700px; /* Set to 2x card width */
+    border-radius: 500px;
+    padding: 0 15px;
+    border: none;
+}
+
+.header .icon {
+    height: 1.5rem;
+    width: auto;
 }
 
 .header-bottom {
@@ -59,12 +93,35 @@
     display: grid;
     grid-auto-flow: column;
     align-items: center;
+    gap: 1rem;
+}
+
+.greeting .msg {
+    font-size: .8rem;
+    margin: 0;
+}
+
+.greeting .usr {
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 .actions {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
+}
+
+.actions button {
+    background-color: #1A92D4;
+    color: #FFFFFF;
+    border: none;
+    height: 2rem;
+    width: 6rem;
+    border-radius: 500px;
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 .acct-img.sm {
@@ -86,6 +143,7 @@
         "projects announcements"
         "projects trending";
     grid-template-rows: min-content 1fr;
+    
 }
 
 .projects-area {
