--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
     font-family: "Roboto", sans-serif;
     display: grid;
     grid-template-columns: min-content 1fr;
+    grid-template-rows: min-content 100%;
     margin: 0;
+    min-height: 100vh;
 }
 
 .sidebar {
@@ -16,6 +18,7 @@ body {
     grid-row: 1 /3;
     background-color: #1A92D4;
     color: #FFFFFF;
+    z-index: 2;
 }
 
 .sidebar ul {
@@ -48,6 +51,7 @@ body {
     padding: 20px;
     font-weight: 700;
     box-shadow: 0px -4px 14px 4px #D1D3D3;
+    z-index: 1;
 }
 
 .header-top {
@@ -143,7 +147,10 @@ body {
         "projects announcements"
         "projects trending";
     grid-template-rows: min-content 1fr;
-    
+    gap: 1rem;
+    padding: 0 1rem;
+    background-color: #E2E8EF;
+    z-index: 0;
 }
 
 .projects-area {
@@ -161,4 +168,20 @@ body {
 .project-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 1rem;
+}
+
+.card {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 2rem;
+    box-shadow: 5px 5px 8px -4px #D1D3D3;
+}
+
+.project.card {
+    border-left: .5rem solid #EFB429;
+}
+
+h3 {
+    margin: 0;
 }
