--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ ul img {
 }
 
 .header {
-    padding: 20px;
+    padding: 1rem 4rem 1rem 2rem;
     font-weight: 700;
     box-shadow: 0px -4px 14px 4px #D1D3D3;
     z-index: 1;
